<resources>
    <string name="app_name">Cadastro de Pessoas</string>
    <string name="bt_cadastra">Cadastrar</string>
    <string name="bt_Visualiza">Visualizar</string>
    <string name="et_nome">Nome</string>
    <string name="et_email">E-mail</string>
    <string name="et_telefone">Telefone</string>
    <string name="bt_excluir">Excluir</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="bt_fechar">Fechar</string>
    <string name="titulo_incluindo">Inclindo Usuário</string>
    <string name="titulo_editando">Editando Usuário</string>
    <string name="obrigatorio">Obrigatório</string>


</resources>
